--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,33 @@ section {
 
 img {
   width: 100%;
+  cursor: pointer;
 }
 
+/* FOR ABOUT PAGE */
+.row
+{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.col-2
+{
+    flex-basis: 50%;
+    min-width: 300px;
+}
+.col-2 img
+{
+    max-width: 95%;
+    padding: 50px 0;
+}
+.col-2 h1
+{
+    font-size: 50px;
+    line-height: 60px;
+    margin: 25px 0;
+}
 /* NAVIGATION SECTION */
 
 header {
