--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ img {
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+   /* background: url(./images/codes.jpg) no-repeat; */
 }
 .col-2
 {
@@ -664,4 +665,20 @@ form i {
   position: absolute;
   right: 2rem;
   bottom: 3rem;
+}
+
+/*----Scroll-To-Top button---*/
+#go-top{
+  display: none;
+  font-size: 30px;
+  position: fixed;
+  bottom: 200px;
+  right: 50px;
+  border: 2px solid #33A5FF;
+  border-radius: 5px;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  text-align: center;
+  cursor: pointer;
 }
