--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,8 @@ img {
     content: '';
     background: #33A5FF;
     width: 80px;
-    height: 5px;
-    border-radius: 5px;
+    height: 3px;
+   /* border-radius: 5px; */
     position: absolute;
     bottom: 0;
     left: 50%;
