--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif !important;
+  font-family: "Poppins", sans-serif !important;
 }
 
 p {
@@ -100,6 +100,10 @@ img {
     font-size: 3.5rem;
     line-height: 60px;
     margin: 25px 0;
+}
+.col-2 h1 span
+{
+  color: #33A5FF;
 }
 .col-2 ul{
   list-style-type: disc;
@@ -338,7 +342,10 @@ nav .logo {
   font-size: 2.3rem;
   font-weight: 700;
 }
-
+.heading-4 {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
 .card h3 {
   padding-bottom: 4rem;
 }
