--- a/style2.css
+++ b/style2.css
@@ -241,7 +241,7 @@ textarea.input {
 .social-icons a {
   width: 35px;
   height: 35px;
-  border-radius: 5px;
+  border-radius: 50%;
   background: linear-gradient(45deg, #1abc9c, #149279);
   color: #fff;
   text-align: center;
@@ -252,6 +252,7 @@ textarea.input {
 
 .social-icons a:hover {
   transform: scale(1.05);
+  /*transform: translateY(-1rem);*/
 }
 
 .contact-info:before {
