--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Open Sans", sans-serif;
 }
 
 p {
@@ -60,6 +60,7 @@ img {
 .title
 {
     text-align: center;
+    margin-top: 30px;
     margin: 20px,80px;
     position: relative;
     line-height: 60px;
@@ -77,6 +78,7 @@ img {
     left: 50%;
     transform: translateX(-50%);
 }
+
 .row
 {
     display: flex;
@@ -97,13 +99,13 @@ img {
 }
 .col-2 h1
 {
-    font-size: 3.5rem;
-    line-height: 60px;
+    font-size: 3.0rem;
+    line-height: 40px;
     margin: 25px 0;
 }
 .col-2 h1 span
 {
-  color: #33A5FF;
+  color: #258aff;
 }
 .col-2 ul{
   list-style-type: disc;
@@ -111,6 +113,8 @@ img {
 .col-2 ul li{
   float: inline-start;
   font-size: 1.8rem;
+  color: #555;
+  line-height: 30px;
 }
 .btn2 {
   display: inline-block;
@@ -148,6 +152,28 @@ img {
   /* background-color: var(--pink); */
   transform: translateX(0);
 }
+
+/*---For Web Design Service----*/
+.container-2{
+  width: 100%;
+  background-color: rgb(248, 248, 255);
+}
+.title-2{
+  text-align: center;
+  margin: 20px,80px;
+  margin-top: 30px;
+  position: relative;
+  font-size: 3.1rem;
+}
+.title-2 span{
+  color: #258aff;
+}
+.content{
+  margin: 15px 15px;
+}
+
+
+
 /* NAVIGATION SECTION */
 
 header {
